# EOD-AV

./: .gitignore  README.md
HesaiLidar_ROS_2.0/config/: config.yaml
HesaiLidar_ROS_2.0/launch/: start.py
HesaiLidar_ROS_2.0/rviz/: rviz_lidar&camera.rviz
arena_camera_node/: CMakeLists.txt
arena_camera_node/launch/: three_cameras.launch.py
arena_camera_node/src/: ArenaCameraNode.cpp  ArenaCameraNode.h  Untitled-2.cpp
ars430_ros_publisher/: CMakeLists.txt  README.md  package.xml
ars430_ros_publisher/launch/: radar_live.launch.py
ars430_ros_publisher/msg/: RadarDetection.msg  RadarObject.msg  RadarObjectList.msg  RadarPacket.msg
ars430_ros_publisher/rviz/: radar_diagnostic.rviz
ars430_ros_publisher/scripts/: decode_v2_pcap.py  radar_stats.py
ars430_ros_publisher/src/: radar_clusters_node.cpp  radar_objects_node.cpp  radar_processor_node.cpp  radar_publisher_node.cpp  radar_visualizer_node.cpp
eod_av_launch/: package.xml  setup.cfg  setup.py
eod_av_launch/launch/: camera_lidar_gnss_sync.launch.py  camera_lidar_sync.launch.py  static_transforms.launch.py
gps_bringup/: CMakeLists.txt  README.md  package.xml
gps_bringup/launch/: gps.launch.py
gps_bringup/nodes/: gps_node.py
gps_bringup/scripts/: fix_to_path.py
setup/: README.md  setup_ptp_sync.sh
um982_driver/: README.md  package.xml  setup.cfg  setup.py
um982_driver/launch/: um982_heading.launch.py
um982_driver/udev/: 99-eodav-um982-heading.rules.template
um982_driver/um982_driver/: __init__.py  configure_um982.py  heading_node.py
