<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars430_ros_publisher</name>
  <version>2.0.0</version>
  <description>
    ROS2 Jazzy driver for the Continental ARS430 radar (RDI protocol v2,
    multicast). Publisher (libpcap sniffer + v2 decoder), processor with
    runtime-tunable filters, and PointCloud2 visualizer.
  </description>
  <maintainer email="japolo1503@gmail.com">japolo15</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>libpcap-dev</depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
